<resources>
    <string name="app_name" translatable="false">VKMusicSync</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="pref_title_login">Login/Logout</string>
    <string name="pref_login_state">Current state: </string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Sync</string>
    <string name="pref_header_about">About</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary">Visit us</string>
    <string name="pref_login_state_online">Online</string>
    <string name="pref_login_state_offline">Offline</string>
    <string name="current_state">Current state: </string>
    <string name="state_offline">Offline</string>
    <string name="state_online">Online</string>
    <string name="pref_count_of_tracks_title">Count of tracks</string>
    <string name="pref_count_of_tracks_summary">The amount of tracks to sync</string>
    <string name="refresh_button">Refresh</string>
    <string name="sync_button" translatable="false">SyncIt!</string>
    <string name="title_activity_prefs">Settings</string>
    <string name="pref_directory_title">Directory</string>
    <string name="pref_directory_summary">Place to sync to</string>
    <string name="pref_sendbug_title">Send bug</string>
    <string name="pref_sendbug_summary">Send an error report</string>
    <string name="about_title">About</string>
    <string name="about_text">This program was created by Leonid Skorospelov for free use and contributing to. You can find sources on https://github.com/LeoSko/VKMusicSyncAndroid or email me (leosko94@gmail.com) freely to improve this software.</string>
    <string name="send_mail">Send mail</string>
    <string name="no_email_clients">There are no email clients installed</string>
    <string name="pref_remove_now_title">Remove old files</string>
    <string name="pref_remove_now_summary">Delete old files (%1$d) from memory</string>
    <string name="remove_now_dialog_title">Remove files</string>
    <string name="remove_now_dialog_message">Removing:\n%1$s</string>
    <string name="remove_now_dialog_yes">Remove</string>
    <string name="remove_now_dialog_no">Cancel</string>
</resources>
