<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_login"
        android:title="@string/pref_title_login"
        android:summary="@string/pref_login_state"
        />
    <ListPreference
        android:key="pref_countOfTracks"
        android:title="@string/pref_count_of_tracks_title"
        android:summary="@string/pref_count_of_tracks_summary"
        android:entries="@array/count_values"
        android:entryValues="@array/count_values"
        />
    <Preference
        android:key="pref_directory"
        android:title="@string/pref_directory_title"
        android:summary="@string/pref_directory_summary"
        />
    <Preference
        android:key="pref_removeNow"
        android:title="@string/pref_remove_now_title"
        android:summary="@string/pref_remove_now_summary"
        />
    <Preference
        android:key="pref_about"
        android:title="@string/pref_about_title"
        android:summary="@string/pref_about_summary"
        />
    <Preference
        android:key="pref_sendbug"
        android:title="@string/pref_sendbug_title"
        android:summary="@string/pref_sendbug_summary"
        />
</PreferenceScreen>
